# python-graphql-demo

./: README.md  characters.json  films.json  pyproject.toml
graphql_demo/: db.py  helper.py  main.py  schema.py  schemas.py  swapi.py
tests/: test_graphql_demo.py
