[tool.poetry]
name = "graphql-demo"
version = "0.1.0"
description = ""
authors = ["Briony Goldsack <goldsack@arrival.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
graphene = "^2.1.8"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.7.2"
black = {version = "^20.8b1", allow-prereleases = true}
flake8 = "^3.9.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
